--- a/_shows/2026-01-11.md
+++ b/_shows/2026-01-11.md
@@ -3,5 +3,5 @@ title: "Pub on 61"
 layout: game
 date: "2026-01-11 18:00"
 location: "5 Song Debut at Rockpile | The Pub on 61 - Charleston, SC"
-tickets: "https://www.facebook.com/share/1AD8fQr1Nr/"
+info: "https://www.facebook.com/share/1AD8fQr1Nr/"
 ---
